adding angular controller

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="LDiff" ng-controller="LDiff">
     <head>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <script src="angular.js"></script>
+        <script src="index.js"></script>
     </head>
     <body>
         <div id="banner">
             <div id="banner_">
-                quick diff tool
+                {{appName}}
             </div>
         </div>
         
