starting to write app

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <!-- input 1 -->
             <div class="inputDiv">
                 <div class="inputName">input #1</div>
-                <textarea class="taInput" ></textarea>
+                <textarea class="taInput" ng-model="input1" ></textarea>
             </div>
 
             <!-- input 2 -->
             <div class="inputDiv">
-                <div class="inputName">input #1</div>
-                <textarea class="taInput"></textarea>
+                <div class="inputName">input #2</div>
+                <textarea class="taInput" ng-model="input2"></textarea>
             </div>
         
             <button id="computeButton">compute</button>
